# ChangeLog for media-libs/libquicktime
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.113 2008/07/15 09:32:33 aballier Exp $

*libquicktime-1.0.3 (15 Jul 2008)

  15 Jul 2008; Alexis Ballier <aballier@gentoo.org>
  +libquicktime-1.0.3.ebuild:
  version bump

*libquicktime-1.0.2_p20080621 (21 Jun 2008)

  21 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
  +libquicktime-1.0.2_p20080621.ebuild:
  Bump to snapshot. Fixes 218101 wrt. libquicktime. Please wait for the
  correct distfile to propagate.

  20 Jun 2008; Alexis Ballier <aballier@gentoo.org>
  libquicktime-1.0.2.ebuild:
  ffmpeg plugin will not be built if we are usingg too recent ffmpeg, adjust
  deps accordingly

  07 Apr 2008; Ben de Groot <yngwin@gentoo.org> libquicktime-1.0.2.ebuild:
  Pkgmove x264-svn to x264

  20 Mar 2008; Alexis Ballier <aballier@gentoo.org>
  -libquicktime-1.0.1.ebuild:
  remove old

  10 Mar 2008; Steve Dibb <beandog@gentoo.org> libquicktime-1.0.2.ebuild:
  amd64 stable, bug 212020

  07 Mar 2008; Brent Baude <ranger@gentoo.org> libquicktime-1.0.2.ebuild:
  stable ppc64, bug 212020

  04 Mar 2008; Raúl Porcel <armin76@gentoo.org> libquicktime-1.0.2.ebuild:
  alpha/ia64/sparc stable wrt #212020

  03 Mar 2008; Christian Faulhammer <opfer@gentoo.org>
  libquicktime-1.0.2.ebuild:
  stable x86 (bug 212020)

  02 Mar 2008; Lars Weiler <pylon@gentoo.org> libquicktime-1.0.2.ebuild:
  stable ppc, bug 212020

  01 Mar 2008; Alexis Ballier <aballier@gentoo.org>
  -files/libquicktime-1.0.1-nls-asneeded.patch,
  -files/libquicktime-1.0.1-pkgconfig_init.patch,
  -libquicktime-1.0.1-r1.ebuild:
  unused version

*libquicktime-1.0.2 (08 Jan 2008)

  08 Jan 2008; Alexis Ballier <aballier@gentoo.org>
  +libquicktime-1.0.2.ebuild:
  version bump

  03 Jan 2008; Alexis Ballier <aballier@gentoo.org>
  libquicktime-1.0.1-r1.ebuild:
  Keyword ~x86-fbsd, working fine here
