@@ -1,6 +1,10 @@
 # ChangeLog for media-libs/libquicktime
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.113 2008/07/15 09:32:33 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/libquicktime/ChangeLog,v 1.114 2008/08/07 21:11:23 aballier Exp $
+
+  07 Aug 2008; Alexis Ballier <aballier@gentoo.org>
+  -libquicktime-1.0.2_p20080621.ebuild:
+  remove unused version
 
 *libquicktime-1.0.3 (15 Jul 2008)
 
